--- a/client/src/assets/scss/_variable.scss
+++ b/client/src/assets/scss/_variable.scss
@@ -1,4 +1,4 @@
 $color-text-dark: #000000d9;
 $color-text-gray: rgb(135, 135, 135);
-$color-primary: #fcb000;
+$color-primary: #f3aa00;
 $color-secondary: #74d14c;
